--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "formik": "^2.4.5",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-hot-toast": "^2.4.1",
     "react-redux": "^8.1.3",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
